# czh-http-server

./: .gitignore  Cargo.toml  README.md  a.txt
app/: index.html  index.js
http-server-async-czh/: Cargo.toml
http-server-async-czh/src/: actor.rs  body_type.rs  decoder.rs  encoder.rs  into_responses.rs  lib.rs  main.rs
http-server-async-czh/tests/: normal.rs
nextjs-static/: bun.lockb  next.config.ts  package.json
nextjs-static/src/app/: page.tsx
nextjs-static/src/app/dashboard/: page.tsx
nextjs-static/src/app/user/: loading.tsx  page.tsx
src/: controller.rs  filter.rs  lib.rs  main.rs  request.rs  response.rs  route.rs
