[package]
name = "http-server-async-czh"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
# futures = "0.3.31"
http = "1.3.1"
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["rt", "macros", "net", "io-util"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
